--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+src/Ucommerce.Masterclass.Sitecore/packages/
+src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/obj/
+*.user
+src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/bin/
+src/Ucommerce.Masterclass.Sitecore/.vs/
