Updated dependency to latest Ucommerce.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/obj/
 *.user
 src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/bin/
 src/Ucommerce.Masterclass.Sitecore/.vs/
+src/Ucommerce.Masterclass.Sitecore/.idea/
